--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.2.0",
