--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^1.7.18",
     "@types/react-router": "^5.1.20",
     "@types/react-router-dom": "^5.3.3",
+    "ag-grid-community": "^31.2.1",
+    "ag-grid-react": "^31.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
