--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "ag-grid-react": "^31.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "pigeon-maps": "^0.21.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
     "react-router-dom": "^6.22.3",
+    "react-spinners-kit": "^1.9.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
