--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@types/react-router-dom": "^5.3.3",
     "ag-grid-community": "^31.2.1",
     "ag-grid-react": "^31.2.1",
+    "chart.js": "^4.4.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "pigeon-maps": "^0.21.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router": "^6.22.3",
