--- a/server-a3/package.json
+++ b/server-a3/package.json
@@ -4,6 +4,7 @@
     "main": "server.js",
     "scripts": {
         "test": "curl --insecure https://localhost:3000/countries",
+        "knex-migrate": "NODE_ENV=production npx knex --knexfile src/db/knexfile.ts migrate:latest",
         "build": "tsc",
         "start": "tsc && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/server.js",
         "dev": "nodemon --exec ts-node src/server.ts"
@@ -23,6 +24,7 @@
         "express": "^4.19.2",
         "jsonwebtoken": "^9.0.2",
         "knex": "^3.1.0",
+        "lodash.merge": "^4.6.2",
         "mariadb": "^3.3.0",
         "module-alias": "^2.2.3",
         "mysql2": "^3.10.0",
@@ -35,6 +37,7 @@
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.21",
         "@types/jsonwebtoken": "^9.0.6",
+        "@types/lodash.merge": "^4.6.9",
         "@types/module-alias": "^2.0.4",
         "@types/node": "^20.12.12",
         "@types/swagger-jsdoc": "^6.0.4",
