--- a/server-a3/package.json
+++ b/server-a3/package.json
@@ -5,8 +5,9 @@
     "scripts": {
         "test": "curl --insecure https://localhost:3000/countries",
         "knex-migrate": "NODE_ENV=production npx knex --knexfile src/db/knexfile.ts migrate:latest",
+        "knex-seed": "NODE_ENV=production npx knex --knexfile src/db/knexfile.ts seed:run",
         "build": "tsc",
-        "start": "tsc && TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/server.js",
+        "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/server.js",
         "dev": "nodemon --exec ts-node src/server.ts"
     },
     "_moduleAliases": {
