--- a/client-a2/Dockerfile
+++ b/client-a2/Dockerfile
@@ -1,5 +1,5 @@
 FROM node:current AS base
-WORKDIR /app/client
+WORKDIR /client
 
 FROM base AS install
 COPY . .
@@ -7,7 +7,7 @@ RUN npm i && npm i serve
 RUN npm run build
 
 FROM install AS main
-COPY --from=install /app/client/dist/ .
+COPY --from=install /client/dist/ .
 
 EXPOSE 3000/tcp
 ENTRYPOINT [ "npx", "serve" ]
