--- a/compose.yaml
+++ b/compose.yaml
@@ -1,35 +1,43 @@
 services:
   client:
     build: client-a2
-    restart: on-failure
-    depends_on:
-      - server
     ports:
       - "3000:3000"
+    depends_on:
+      - server
+    networks:
+      - client_net
 
-  # --
   server:
     build: server-a3
-    restart: on-failure
     depends_on:
       db:
         condition: service_healthy
     ports:
-      - "8000:8000"
+      - "8080:8080"
+    networks:
+      - client_net
+      - server_net
+    links:
+      - db
 
-  # --
   db:
-    image: mysql:latest
+    image: mysql
+    restart: always
     volumes:
-      - ./server-a3/db-dump:/docker-entrypoint-initdb.d
+      - ./server-a3/volume-db/volcanoes.sql:/docker-entrypoint-initdb.d/volcanoes.sql
     environment:
         MYSQL_ROOT_PASSWORD: root
-
-    # bind ports somewhere??
     healthcheck:
       test: ["CMD-SHELL", "mysqladmin ping -h 127.0.0.1 -u root --password=root --silent"]
       interval: 10s
       timeout: 20s
       retries: 10
       start_period: 30s
+    networks:
+      - server_net
+
+networks:
+  client_net: {}
+  server_net: {}
 
