--- a/server-a3/.env
+++ b/server-a3/.env
@@ -1,13 +1,12 @@
-CERT_FILE=src/certificate/server.cert
-KEY_FILE=src/certificate/serverkey
-# DB_HOST=localhost
-DB_HOST=172.20.0.2
-DB_NAME=volcanoes
-JWT_SECRET=murky-reclusive-uncertain
-STUDENT_NAME='pls uwu'
-STUDENT_NUM=x0000000
-DB_USER=root
-DB_PASSWORD=root
+export CERT_FILE=src/certificate/server.cert
+export KEY_FILE=src/certificate/serverkey
+export DB_HOST=db
+export DB_NAME=volcanoes
+export JWT_SECRET=murky-reclusive-uncertain
+export STUDENT_NAME=pls_uwu
+export STUDENT_NUM=x0000000
+export DB_USER=root
+export DB_PASSWORD=root
 # DB_USER=www-data
 # DB_PASSWORD=landing-sixtieth-catapult
 # DB_PASSWORD=Cab230!
