--- a/server-a3/package.json
+++ b/server-a3/package.json
@@ -3,10 +3,9 @@
     "version": "1.0.0",
     "main": "server.js",
     "scripts": {
-        "test": "curl --insecure https://localhost:3000/countries",
         "knex-migrate": "NODE_ENV=production npx knex --knexfile src/db/knexfile.ts migrate:latest",
         "knex-seed": "NODE_ENV=production npx knex --knexfile src/db/knexfile.ts seed:run",
-        "build": "tsc",
+        "build": "npx tsc",
         "start": "TS_NODE_BASEURL=./dist node -r tsconfig-paths/register dist/server.js",
         "dev": "nodemon --exec ts-node src/server.ts"
     },
